--- a/src/templates/MainLayout/styles.css
+++ b/src/templates/MainLayout/styles.css
@@ -8,7 +8,8 @@
     padding: 48px 0 0;
     width: 100%;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-    background-color: rgba(0, 0, 0, .1);
+    /* background-color: rgba(0, 0, 0, .1); */
+    background-color: red;
     color: white;
 }
 #sidebar-wrapper {
