--- a/src/templates/MainLayout/styles.css
+++ b/src/templates/MainLayout/styles.css
@@ -1,31 +1,19 @@
 .sidebar {
-<<<<<<< HEAD
-    position: fixed;
-=======
     position: relative;
->>>>>>> origin/honey
     top: 0;
     bottom: 0;
     left: 0;
     min-height: 100vh !important;
     z-index: 100;
-    padding: 48px 0 0;
-    width: 100%;
-<<<<<<< HEAD
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-    /* background-color: rgba(0, 0, 0, .1); */
-    background-color: red;
-    color: white;
-=======
-    box-shadow: inset -1px 0 0 rgba(137, 145, 221, 0.1);
-    background-color: red;
-    color:white;
->>>>>>> origin/honey
+    padding: 0 0 40px 0;
+    width: 100%; 
+    color: #FFFFFF;
+    background-color: rgb(48, 54, 65);
+    box-shadow: inset -1px 0 0 rgba(137, 145, 221, 0.1); 
 }
 #sidebar-wrapper {
-    min-height: 100vh !important;
-    width: 100vw;
-    margin-left: -1rem;
+    min-height: 100vh !important; 
+    margin-left: -1rem; 
     -webkit-transform: margin .25s ease-out;
     -moz-transition: margin .25 ease-out;
     -o-transition: margin .25s ease-out;
@@ -38,4 +26,25 @@
 #page-content-wrapper { 
     min-width: 0;
     width: 100%;
+}
+.topbar {
+    background-color: white;
+    color: black;
+    border-bottom: 1px solid rgb(48, 54, 65);
+    width: 100%;
+    /* opacity: 0.5; */
+}
+.nav-item { 
+    padding: 0.5rem 2.25rem;
+}
+.hr {
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
+    position: relative;
+    border: 1px;
+    border-top: 1px solid white;
+}
+.sidelogo {
+    width: 100%;
+    height: 71px;
 }
