--- a/src/templates/MainLayout/styles.css
+++ b/src/templates/MainLayout/styles.css
@@ -1,30 +1,303 @@
-.sidebar {
+/* .sidebar {
     position: relative;
     top: 0;
     bottom: 0;
     left: 0;
     min-height: 100vh !important;
     z-index: 100;
-    padding: 48px 0 0;
-    width: 100%;
-    box-shadow: inset -1px 0 0 rgba(137, 145, 221, 0.1);
-    background-color: red;
-    color:white;
-}
-#sidebar-wrapper {
-    min-height: 100vh !important;
-    width: 100vw;
-    margin-left: -1rem;
+    padding: 0 0 40px 0;
+    width: 100%; 
+    color: #FFFFFF;
+    background-color: rgb(48, 54, 65);
+    box-shadow: inset -1px 0 0 rgba(137, 145, 221, 0.1); 
+} */
+/* #sidebar-wrapper {
+    min-height: 100vh !important; 
+    margin-left: -1rem; 
     -webkit-transform: margin .25s ease-out;
     -moz-transition: margin .25 ease-out;
     -o-transition: margin .25s ease-out;
     transition: margin .25s ease-out;
-}
-#sidebar-wrapper .sidebar-heading {
+} */
+/* #sidebar-wrapper .sidebar-heading {
     padding: 0.875rem 1.25rem;
     font-size: 1.2rem;
-}
-#page-content-wrapper { 
+} */
+/* #page-content-wrapper { 
     min-width: 0;
     width: 100%;
+} */
+/* .topbar {
+    background-color: white;
+    color: black;
+    border-bottom: 1px solid rgb(48, 54, 65);
+    width: 100%; 
+} */
+.nav-item { 
+    padding: 0.5rem 2.25rem;
+}
+.hr {
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
+    position: relative;
+    border: 1px;
+    border-top: 1px solid white;
+}
+.sidelogo {
+    width: 100%;
+    height: 71px;
+}
+
+.beedy-alert-container {
+    display: flex;
+    position: fixed;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0 0 20px 0 black;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: scaleY(1);
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 9000;
+  }
+  .beedy-alert {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: .3125em;
+    overflow: hidden; 
+    width: 32em;
+    max-width: 100%;
+    outline: none;
+    margin: auto;
+    padding: 1.25rem;
+    text-align: center;
+    z-index: 9999;
+  }
+  .beedy-alert .title {
+    position: relative;
+    max-width: 100%;
+    margin: 0 0 .3em;
+    padding: 0;
+    color: #595959;
+    font-size: 1.875em;
+    font-weight: 600;
+    text-transform: none;
+    /* transform: rotate(-45deg); */
+    transition: transform .5s ease .4s;
+    animation: cubic-bezier(.75, .21, .21, .78);
+    word-wrap: break-word;
+  }
+  .beedy-alert .content {
+    z-index: 1;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    color: #545454;
+    font-size: 1.125em;
+    font-weight: 300;
+    line-height: normal;
+    text-align: center;
+    word-wrap: break-word;
+  }
+/* .beedy-alert span {
+  color: #2ecc71;
+  font-size: 40px;
+  display: block;
+  margin: 10px 0;
+} */
+.beedy-alert h1 {
+  color: #333;
+}
+.beedy-alert .icon {
+  width: 50px;
+  height: 25px;
+  border-width: 4px;
+  border-color: gray;
+  border-style: solid;
+  border-radius: 50%;
+  position: relative;
+  margin: 20px auto;
+  box-sizing: content-box;
+  opacity: 1;
+  transform-origin: 50% 50%;
+  transition: all 0.1s;
+  transform: scale(1);
+}
+.beedy-alert .close {
+  font-size: 25px;
+  position: absolute;
+  right: 4px;
+  top: -2px;
+  font-weight: 900;
+  z-index: 1;
+  cursor: pointer;
+  color: rgb(113, 113, 113);
+}
+
+.beedy-alert.warning .icon {
+  background-color: #f0ad4e;
+  animation: cubic-bezier(0.785, 0.135, 0.15, 0.86); 
+  height: 60;
+}
+.beedy-alert.success {
+  border-color: #4cae4c;
+}
+.beedy-alert.success .icon::after {
+  border-radius: 50%;
+  position: absolute;
+  background: white;
+}
+
+
+* {
+    margin: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+body {
+    background: #e1ecf2;
+}
+.wrapper {
+    margin: 10px;
+}
+.wrapper .top_navbar {
+    width: calc(100% - 20px);
+    height: 60px;
+    display: flex;
+    position: fixed;
+    top: 10px;
+}
+.wrapper .top_navbar .hamburger {
+    width: 70px;
+    height: 100%;
+    background: #2e4ead;
+    padding: 15px 17px;
+    border-top-left-radius: 20px;
+    cursor: pointer;
+}
+.wrapper .top_navbar .hamburger div{
+    width: 35px;
+    height: 4px;
+    background: #92a6e2;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.wrapper .top_navbar .top_menu {
+    width: calc(100% - 70px);
+    background: #fff;
+    height: 100%;
+    border-top-left-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.wrapper .top_navbar .top_menu .logo {
+    color: #2e4ead;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 3px;
+}
+
+.wrapper .top_navbar .top_menu ul {
+    display: flex;
+}
+
+.wrapper .top_navbar .top_menu ul li a {
+    display: flex;
+    margin: 0 10px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border: 1px solid #2e4ead;
+    text-align: center;
+    border-radius: 50%;
+    color: #2e4ead;
+}
+.wrapper .top_navbar .top_menu ul li a:hover {
+    background: #4360b5;
+    color: #fff;
+}
+.wrapper .sidebar {
+    position: fixed;
+    top: 70px;
+    left: 10px;
+    background: #2e4ead;
+    height: calc(100% - 80px);
+    border-bottom-left-radius: 20px;
+    transition: all 0.3s ease;
+}
+.wrapper .sidebar ul li,
+.wrapper .sidebar ul li a {
+    display: block;
+    padding: 20px;
+    color: #fff;
+    position: relative;
+    margin-bottom: 1px;
+    color: #92a6e2;
+    white-space: nowrap;
+}
+.wrapper .sidebar ul li a:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3px;
+    height: 100%;
+    background: #92a6e2;
+    display: none;
+}
+.wrapper .sidebar ul li a span.icon {
+    margin-right: 10px;
+    display: inline-block;
+}
+.wrapper .sidebar ul li a span.title { 
+    display: inline-block;
+}
+
+.wrapper .sidebar ul li a:hover,
+.wrapper .sidebar ul li a:active {
+   background: #4360b5;
+   color: #fff;
+}
+.wrapper .sidebar ul li a:hover:before,
+.wrapper .sidebar ul li a:active {
+    display: block;
+}
+
+.wrapper .main_container {
+    width: calc(100% - 200px);
+    margin-top: 70px;
+    margin-left: 200px;
+    padding: 15px;
+    transition: all 0.3s ease;
+}
+.wrapper.collapse .sidebar {
+width: 70px;
+}
+.wrapper.collapse .sidebar ul li a {
+  text-align: center;
+}
+.wrapper.collapse .sidebar ul li a span.icon {
+  margin: 0;
+}
+.wrapper.collapse .sidebar ul li a span.title {
+  display: none;
+}
+.wrapper.collapse .main_container {
+  width: calc(100% - 70px);
+  margin-left: 70px;
 }
