--- a/src/templates/MainLayout/styles.css
+++ b/src/templates/MainLayout/styles.css
@@ -3,6 +3,19 @@
     border: 1px;
     border-top: 1px solid white;
 }
+
+.text-muted {
+  color: #919aa3 !important
+}
+
+.b-b-default {
+  border-bottom: 1px solid #e0e0e0
+}
+
+.f-w-600 {
+  font-weight: 600
+}
+
 .sidelogos {
     width: 100%;
     height: 71px;
