--- a/src/templates/styles.css
+++ b/src/templates/styles.css
@@ -1798,3 +1798,14 @@ footer h3 {
 .whatsapp {
   background-color: #363b4d;
 }
+
+blockquote {
+    font-size: 14px;
+    border-left: 5px solid #D90000;
+}
+blockquote {
+    padding: 10px 20px;
+    margin: 0 0 20px;
+    font-size: 17.5px;
+    border-left: 5px solid #eee;
+}
